[gd_scene load_steps=2 format=3 uid="uid://demw6tal4o11a"]

[ext_resource type="Script" uid="uid://b4sxbxs3ggcm5" path="res://windows/settingsWindow/SettingsWindow.gd" id="1_qvn1i"]

[node name="SettingsWindow" type="Window"]
oversampling_override = 1.0
title = "Configurações"
position = Vector2i(0, 36)
size = Vector2i(1060, 710)
visible = false
exclusive = true
force_native = true
script = ExtResource("1_qvn1i")

[node name="BackgroundColor" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Geral"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsItemList" type="ItemList" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
auto_height = true
item_count = 4
item_0/text = "Janela"
item_0/disabled = true
item_1/text = "Tema"
item_2/text = "Idioma"
item_2/disabled = true
item_3/text = "Fontes"
item_3/disabled = true

[node name="OptionsContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/OptionsItemList" to="." method="_on_options_item_selected"]
